--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - 2.7
   - 3.6
 install:
-  - cp lib/libTilengine.so /usr/lib/x86_64-linux-gnu
-  - chmod a+x /usr/lib/x86_64-linux-gnu/libTilengine.so
+  - sudo cp lib/libTilengine.so /usr/lib/x86_64-linux-gnu
+  - sudo chmod a+x /usr/lib/x86_64-linux-gnu/libTilengine.so
   - sudo apt install libsdl2-dev libsdl2-mixer-dev
   - pip install pysdl2
 script:
